--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.8.0
+  google_ml_kit: ^0.7.2
+  image_picker: ^0.8.4+4
 
 
   # The following adds the Cupertino Icons font to your application.
