--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   image_picker: ^0.8.4+4
   flutter_ffmpeg: ^0.4.2
   video_thumbnail: ^0.4.3
+  video_player: ^2.2.6
+#  permission_handler: ^8.2.5
+  path_provider: ^2.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
