--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   video_player: ^2.2.6
 #  permission_handler: ^8.2.5
   path_provider: ^2.0.6
+  gallery_saver: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
