--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
 #  permission_handler: ^8.2.5
   path_provider: ^2.0.6
   gallery_saver: ^2.3.2
+  flutter_easyloading: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
