--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.6
   gallery_saver: ^2.3.2
   flutter_easyloading: ^3.0.3
+  share_plus: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
